--- a/rinteger-crm/index.html
+++ b/rinteger-crm/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Lencott-crm</title>
-  <base href="/">
+  <base href="/admin/crm/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -13,5 +13,5 @@
 <body>
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
-<script type="text/javascript" src="runtime.a66f828dca56eeb90e02.js"></script><script type="text/javascript" src="polyfills.7a0e6866a34e280f48e7.js"></script><script type="text/javascript" src="scripts.ee7fed27c36eaa5fa8a9.js"></script><script type="text/javascript" src="main.7229b86fcf344a042bec.js"></script></body>
+<script type="text/javascript" src="runtime.a66f828dca56eeb90e02.js"></script><script type="text/javascript" src="polyfills.7a0e6866a34e280f48e7.js"></script><script type="text/javascript" src="scripts.ee7fed27c36eaa5fa8a9.js"></script><script type="text/javascript" src="main.f2b72ced8de7ab024511.js"></script></body>
 </html>
